# theBrainonFire_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  sdl_app  theBrainOnFire
assets/: Cube.h  Leggimi prima di aprire le cartelle.txt
assets/SpriteButton/png/Button/Rect/: Default - Copia.odg  Hover - Copia.odg
assets/fonts/: readme.txt
assets/game_logo/: README.txt
assets/grounds/: README.txt
assets/icons/hearts/: README.txt
assets/inputs/: README.txt
header/: Button.h  Cube.h  Game.h  GameMenu.h  GamePlayer.h  GameState.h  Map.h  Memoria.h  Menu.h  Mouse.h  RuleMenu.h  Sound.h  TextureManager.h
src/: Button.cpp  Game.cpp  GameMenu.cpp  GamePlayer.cpp  Map.cpp  Memoria.cpp  Menu.cpp  Mouse.cpp  RuleMenu.cpp  Sound.cpp  TextureManager.cpp
